app/assets/stylesheets/partials/base/_main.scss
/* ======================================================================================
   @BASE -> MAIN
   ====================================================================================== */

html {
	font-size: ($font-size/16)+em;
	line-height: $line-height-ratio;
}

/* iOS orientation bug fix: https://github.com/twbs/bootstrap/issues/6643 */
.ios {
	&,
	body {overflow-x: hidden;}

	/* Have to remove for 'Stores' as it screws up the `z-index` stacking order for header elements */
	.stores {overflow-x: visible;}
}

body {
	background-color: $color-grey-3;
	@include to-rem(padding-bottom, $spacing-base);

	/* Change bg color to white and turn off bottom padding for detail views at this breakpoint */
	@include respond-max($palm) {
		&.page-detail-view {
			background-color: #fff;
			padding-bottom: 0;
		}
	}

	/* Turn off bottom padding for 'Stores' */
	&.stores {padding-bottom: 0;}
}

/* Set `font-family` and `color` */
html,
button,
input,
select,
textarea {
	font-family: $font-family;
	color: $color-base-txt;
}

